fix: should not rely on z-index

--- a/assets/index.less
+++ b/assets/index.less
@@ -169,7 +169,6 @@
     position: absolute;
     top: 0;
     overflow: hidden;
-    z-index: 1;
     table {
       width: auto;
       background: #fff;
